solución a error de imagenes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="grupo">
                     <div class="menu-carta">
                         <h3>Moderna</h3>
-                        <img src="/Images/Menu/Moderna.jpg" alt="">
+                        <img src="Images/Menu/Moderna.jpg" alt="">
                         <p>
                             Salsa, muzza, rúcula, jamón crudo, tomates deshidratados, parmesano.
                         </p>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="menu-carta">
                         <h3>Vegetariana</h3>
-                        <img src="/Images/Menu/Vegetariana.jpg" alt="">
+                        <img src="Images/Menu/Vegetariana.jpg" alt="">
                         <p>
                             Salsa, muzza, zucchini asado, berenjena asada, tomates cherris confitados, aceitunas negras y hojas de albaca.
                         </p>
@@ -75,13 +75,13 @@
                 <div class="grupo">
                     <div class="menu-carta">
                         <h3>Especial de Cebolla</h3>
-                        <img src="/Images/Menu/Especial Cebolla.jpg" alt="">
+                        <img src="Images/Menu/Especial Cebolla.jpg" alt="">
                         <p>Salsa, muzza, cebolla cortada en pluma, tomates cherrys confitados, aceitunas negras.</p>
                         <p class="precio" id="precio-cebolla">P: $750 G: $1300</p>
                     </div>
                     <div class="menu-carta">
                         <h3>Mortadela y pesto</h3>
-                        <img src="/Images/Menu/Mortadela y pesto.jpg" alt="">
+                        <img src="Images/Menu/Mortadela y pesto.jpg" alt="">
                         <p>Salsa, muzza, mortadela en fetas, pesto y provolone rallado.</p>
                         <p class="precio" id="precio-mortadela">P: $750 G: $1300</p>
                     </div>
@@ -89,13 +89,13 @@
                 <div class="grupo">
                     <div class="menu-carta">
                         <h3>Alemana</h3>
-                        <img src="/Images/Menu/Alemana.jpg" alt="">
+                        <img src="Images/Menu/Alemana.jpg" alt="">
                         <p>Salsa, Muzza, cebolla caramelizada, salchicha parrillera y mostaza.</p>
                         <p class="precio" id="precio-alemana">P: $750 G: $1300</p>
                     </div>
                     <div class="menu-carta">
                         <h3>Inferno</h3>
-                        <img src="/Images/Menu/Infierno.jpg" alt="">
+                        <img src="Images/Menu/Infierno.jpg" alt="">
                         <p>Salsa, muzza, panceta feteada, jalapeños verdes en rodajas, salsa de jalapeño rojo, cebolla morada, provolone rallado y hojas de albaca</p>
                         <p class="precio" id="precio-inferno">P: $750 G: $1300</p>
                     </div>
@@ -103,13 +103,13 @@
                 <div class="grupo">
                     <div class="menu-carta">
                         <h3>Fugazetta de Jamón</h3>
-                        <img src="/Images/Menu/Fugazetta de Jamon.jpg" alt="">
+                        <img src="Images/Menu/Fugazetta de Jamon.jpg" alt="">
                         <p></p>
                         <p class="precio precio-fugga">P: $750 G: $1300</p>
                     </div>
                     <div class="menu-carta">
                         <h3>Fugazzeta de Pepperoni</h3>
-                        <img src="/Images/Menu/Fugazzetta de pepperoni.jpg" alt="">
+                        <img src="Images/Menu/Fugazzetta de pepperoni.jpg" alt="">
                         <p></p>
                         <p class="precio precio-fugga">P: $750 G: $1300</p>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="grupo">
                     <div class="carta">
                         <h3>Maestro Pizzero</h3>
-                        <img src="/Images/Personal/chef1.jpg" alt="">
+                        <img src="Images/Personal/chef1.jpg" alt="">
                         <p><b>Marcos Sánchez</b></p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, pariatur nulla doloremque saepe unde blanditiis commodi rem! Maiores recusandae et placeat impedit repellendus? Minus vero eligendi aut, laboriosam quo corporis?</p>
                         <ul class="social-icons">
@@ -144,7 +144,7 @@
                 <div class="grupo">
                     <div class="carta">
                         <h3>Recepcionista</h3>
-                        <img src="/Images/Personal/chef3.jpg" alt="">
+                        <img src="Images/Personal/chef3.jpg" alt="">
                         <p><b>Ernesto García</b></p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, pariatur nulla doloremque saepe unde blanditiis commodi rem! Maiores recusandae et placeat impedit repellendus? Minus vero eligendi aut, laboriosam quo corporis?</p>
                         <ul class="social-icons">
@@ -154,7 +154,7 @@
                     </div>
                     <div class="carta">
                         <h3>Repartidor</h3>
-                        <img src="/Images/Personal/chef4.jpg" alt="">
+                        <img src="Images/Personal/chef4.jpg" alt="">
                         <p><b>Mario Gueicha</b></p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, pariatur nulla doloremque saepe unde blanditiis commodi rem! Maiores recusandae et placeat impedit repellendus? Minus vero eligendi aut, laboriosam quo corporis?</p>
                         <ul class="social-icons">
